# Student-Perfomance-Script

./: .gitignore  Makefile  README.MD  example.txt  main.py  pyproject.toml  requirements.txt  students1.csv  students2.csv  students3.csv  students4.csv  students5.csv
.github/workflows/: CI.yml
app/: report.py
app/settings/: __init__.py  config.py  table.py
app/students/: __init__.py  students_report.py
app/tests/: test_get_csv_rows.py  test_parsed_args.py  test_print_students_table.py  test_report_generator.py  test_students_report.py
src/: config.py  csv_reader.py  report.py  students_report.py  table.py
src/csv/: __init__.py  csv_reader.py
src/settings/: __init__.py  config.py
src/students/: __init__.py  students_report.py
